--- a/Characters.html
+++ b/Characters.html
@@ -132,24 +132,24 @@
 
   <div class="content">
     <div class="picture-container">
-      <img src="C:\Documents\Html Projects\Quickees MUSO Site\Atabi.png" alt="Image 1">
+      <img src="https://github.com/QuickJats/MUSO_Site/blob/main/Atabi.png" alt="Image 1">
       <div class="character-info">
         <p>Hailing from Greenthum, Atabi is a no so smart, sarcastic 14 year old who loves archery. He may be weak but he can shoot a bow!</p>
   </div>
   <div class="content">
     <div class="picture-container">
-      <img src="C:\Documents\Html Projects\Quickees MUSO Site\Markus.png" alt="Image 2">
+      <img src="https://github.com/QuickJats/MUSO_Site/blob/main/Markus.png" alt="Image 2">
       <div class="character-info">
         <p>Markus is often known as the kid spending time in the flowers and constantly having his head in the clouds. Atabi being his best friend. The two have been through a lot together.</p>
 </div>
   <div class="content">
     <div class="picture-container">
-      <img src="C:\Documents\Html Projects\Quickees MUSO Site\Nuttalli.png" alt="Image 3">
+      <img src="https://github.com/QuickJats/MUSO_Site/blob/main/Nuttalli.png" alt="Image 3">
       <div class="character-info">
         <p>Coming from what Atabi refers to as 'The Flip-Down', Nuttallii is a rebellious 15 year old who despises anything her mom tries to make her wear. Even if she's tough, she's not too great with magical abilities.</p>
   </div>
   <div class="content">
     <div class="picture-container">
-      <img src="C:\Documents\Html Projects\Quickees MUSO Site\Casey.png" alt="Image 4">
+      <img src="https://github.com/QuickJats/MUSO_Site/blob/main/Casey.png" alt="Image 4">
       <div class="character-info">
         <p>Casey is a detective, and is good friends with Atabi's father, Adam. Despite living on his own in an apartment in Greenthum, he's often called into Bluesbird to investigate on crimes.</p>
